--- a/deepDrawing.html
+++ b/deepDrawing.html
@@ -20,7 +20,7 @@
   <body style="background-color: #343a40!important;">
 
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="home.html"><b>Deep Drawing</b></a>
+  <a class="navbar-brand" href="index.html"><b>Deep Drawing</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
